# forge

./: .gitattributes  .gitignore  CHANGELOG.md  IDEA.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  catalog.json  eslint.config.mjs  learning-path.json  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.lib.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/conformance/: page.tsx
crates/runtime-core/: Cargo.toml  README.md  about.toml
crates/runtime-core/src/: capabilities.rs  compiler.rs  contract.rs  deterministic.rs  error.rs  filesystem.rs  filesystem_quota.rs  interactive.rs  lib.rs  memory.rs  meter.rs  module_imports.rs  module_policy.rs  output.rs  types.rs  web.rs
crates/runtime-core/src/run/: mod.rs  native.rs  web.rs  web_runtime.rs
crates/runtime-core/tests/: cli.rs  runtime.rs
docs/: architecture.md  conformance-report.md  host-integration-contract.md  integration-guide.md  library-contract.md  problem-catalog.md  releasing.md  versioning.md
licenses/: components.json  cpython-hacl-star-8ba599b-MIT.txt  runtime-core-dependencies.html  runtime-core-dependencies.json  rust-COPYRIGHT-library.html  wasi-libc-b9ef79d-dlmalloc-CC0-NOTICE.txt  wasi-libc-b9ef79d-emmalloc-NOTICE.txt  wasmer-sdk-dependencies.html  wasmer-sdk-dependencies.json
public/: _headers  toolchain-cache-sw.js
schemas/: problem-catalog.schema.json  problem.schema.json
scripts/: build-browser-toolchains.sh  build-clang-libcxx-pch.ts  build-library.mjs  build-runtime-core.sh  build-site.ts  cargo-license-inventory.mjs  clean.mjs  compact-runtime-license-report.mjs  compact-wasmer-sdk-license-report.mjs  compare-conformance.ts  download-registry-artifact.mjs  evidence-publication.d.mts  evidence-publication.mjs  generate-judge-problems.mjs  generate-runtime-licenses.sh  generate-third-party-components.mjs  generate-wasmer-sdk-licenses.sh  inspect-python-runtime-files.mjs  learning-path.mjs  learning-path.test.mjs  package-clang-toolchain.mjs  package-go-toolchain.mjs  package-rust-toolchain.mjs  packed-package.mjs  pin-clang-cc1-argv.mjs  pnpm-lock.mjs  prepare-python-toolchain.mjs  problem-schema.test.mjs  release-artifacts.mjs  render-og.mjs  run-browser-conformance.mjs  runtime-licenses.hbs  start-production.mjs  third-party-components.mjs  transform-cost-baselines.mjs  verify-conformance.mjs  verify-contract.mjs  verify-docs.mjs  verify-github-release-assets.mjs  verify-github-workflows.mjs  (+12 more)
src/core/: contract.ts  (+29 more)
tools/: derive_cost_policies.mjs  derive_cost_policies.test.mjs
tools/package-go-webc/: Cargo.toml
tools/package-go-webc/src/: main.rs
tools/package-yowasp-clang/: Cargo.toml
tools/package-yowasp-clang/src/: main.rs
worker/: index.ts
(+1227 files in other folders)
